Update the navigation bar

--- a/Style_guide.html
+++ b/Style_guide.html
@@ -207,26 +207,37 @@
       <section>
         <h2>Main Navigation</h2>
         <h3>CSS selector:</h3>
-        <p>.navigation .navbutton</p>
+        <p>.navigation .navbar .navbutton .navelement</p>
+
 
         <h3>Sample code:</h3>
-        <code>&lt;nav class = "navigation"&gt;</code>
+        <code>&lt;nav class = "navigation navbar"&gt;</code>
+        <code>&lt;dev class = "navelement"&gt;</code>
         <code>&lt;a href="#" class="navbutton"&gt;Artists&lt;/a&gt;</code>
+        <code>&lt;/dev&gt;</code>
+        <code>&lt;dev class = "navelement"&gt;</code>
         <code>&lt;a href="#" class="navbutton"&gt;Artwork&lt;/a&gt;</code>
+        <code>&lt;/dev&gt;</code>
+        <code>&lt;dev class = "navelement"&gt;</code>
         <code>&lt;a href="#" class="navbutton"&gt;Shop&lt;/a&gt;</code>
+        <code>&lt;/dev&gt;</code>
+        <code>&lt;dev class = "navelement"&gt;</code>
         <code>&lt;a href="#" class="navbutton"&gt;Sign in&lt;/a&gt;</code>
+        <code>&lt;/dev&gt;</code>
+        <code>&lt;dev class = "navelement"&gt;</code>
         <code>&lt;a href="#" class="navbutton"&gt;Sign up&lt;/a&gt;</code>
+        <code>&lt;/dev&gt;</code>
         <code>&lt;/nav&gt;</code>
 
 
 
         <h3>Rendered element:</h3>
-        <nav class = "navigation">
-          <a href="Style_guide.html" class = "navbutton">Artists</a>
-          <a href="User-flows.html" class = "navbutton">Artwork</a>
-          <a href="Citations.html" class = "navbutton">Shop</a>
-          <a href="Citations.html" class = "navbutton">Sign in</a>
-          <a href="Citations.html" class = "navbutton">Sign up</a>
+        <nav class = "navigation navbar">
+          <dev class = "navelement"><a href="#" class = "navbutton">Artists</a></dev>
+          <dev class = "navelement"><a href="#" class = "navbutton">Artwork</a></dev>
+          <dev class = "navelement"><a href="#" class = "navbutton">Shop</a></dev>
+          <dev class = "navelement"><a href="#" class = "navbutton">Sign in</a></dev>
+          <dev class = "navelement"><a href="#" class = "navbutton">Sign up</a></dev>
         </nav>
       </section>
 
