--- a/Citations.html
+++ b/Citations.html
@@ -100,6 +100,9 @@
         <li>
           <cite>Andrew</cite>. (Programmer). (2017). <strong>Style Guide Template</strong> [Template]. Retrieved from <a href="https://iat339.andrewh.ca/Projects/P01-Process">https://iat339.andrewh.ca/Projects/P01-Process</a>
         </li>
+        <li>
+          <cite>Peter</cite>. (Programmer). (2014). <strong>order list with numbers another color</strong> [Tutorial]. Retrieved from <a href="https://stackoverflow.com/questions/488830/ol-with-numbers-another-color">https://stackoverflow.com/questions/488830/ol-with-numbers-another-color</a>
+        </li>
       </ul>
 
     </section>
