--- a/Style_guide.html
+++ b/Style_guide.html
@@ -312,20 +312,24 @@
       <section>
         <h2>Color Swatches</h2>
         <h3>CSS selector:</h3>
-        <p>.color .c1 .c2 .c3 .c4 .c5</p>
+        <p>.color .c1 .c2 .c3 .c4 .c5 .c6 .c7</p>
         <h3>Sample code:</h3>
         <code>&lt;p class="color c1"&gt;#012D41&lt;/p&gt;</code>
         <code>&lt;p class="color c2"&gt;#1BA5B8&lt;/p&gt;</code>
         <code>&lt;p class="color c3"&gt;#DAECF3&lt;/p&gt;</code>
         <code>&lt;p class="color c4"&gt;#FF4041&lt;/p&gt;</code>
         <code>&lt;p class="color c5"&gt;#1CA5B8&lt;/p&gt;</code>
+        <code>&lt;p class="color c6"&gt;#586473&lt;/p&gt;</code>
+        <code>&lt;p class="color c7"&gt;#E7DACB&lt;/p&gt;</code>
 
         <h3>Rendered element:</h3>
         <p class="color c1">#012D41</p>
         <p class="color c2">#1BA5B8</p>
-        <p class="color c3">#DAECF3</p>
+        <p class="color c3">#157B9A</p>
         <p class="color c4">#FF4041</p>
-        <p class="color c5">#1CA5B8</p>
+        <p class="color c5">#BA2F2F</p>
+        <p class="color c6">#586473</p>
+        <p class="color c7">#E7DACB</p>
 
     </section>
   </section>
