--- a/Style_guide.html
+++ b/Style_guide.html
@@ -16,6 +16,7 @@
     <nav>
       <a href="Style_guide.html" class = "navbutton">Style Guide</a>
       <a href="User-flows.html" class = "navbutton">User-flows</a>
+      <a href="Sitemap.html" class = "navbutton">Site Map</a>
       <a href="Citations.html" class = "navbutton">Citations</a>
     </nav>
 
