processing pages and css and first page

--- a/Style_guide.html
+++ b/Style_guide.html
@@ -236,9 +236,9 @@
         <nav class = "navigation navbar">
           <dev class = "navelement"><a href="#" class = "navbutton">Artists</a></dev>
           <dev class = "navelement"><a href="#" class = "navbutton">Artwork</a></dev>
-          <dev class = "navelement"><a href="#" class = "navbutton">Shop</a></dev>
-          <dev class = "navelement"><a href="#" class = "navbutton">Sign in</a></dev>
-          <dev class = "navelement"><a href="#" class = "navbutton">Sign up</a></dev>
+          <dev class = "navelement"><a href="#" class = "navbutton">Events</a></dev>
+          <dev class = "navelement"><a href="#" class = "navbutton">Account</a></dev>
+          
         </nav>
       </section>
 
