--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
         <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
         <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
         <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -22,24 +22,29 @@
     </nav>
 
 <!-- events -->
-<div class="flex-grid structure">
-  <div class= "one-col"><a href = "events.html"> <h3>Events</h3> </a></div>
+<div class="flex-grid banner">
+  <div class= "one-col">
+    <figure class = "captioninside">
+    <a href = "events.html" class = "blur"> <img src = "img/65d721_116745a5d0dd412b9355ed66d0c27d4e.png" alt = "homebanner"> </a>
+    <figcaption class = "hide">Discount Event</figcaption>
+  </figure>
+  </div>
 </div>
 <!-- show case artist -->
 <section id="artists">
-  <h3 class="h3">Newest Artists</h3>
+  <h2 class="h2 hometitle">Newest Artists</h2>
     <div class="flex-grid">
       <div class = "three-col">
-        <a href="artistdetail.html"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
-        <a href="artistdetail.html" class="intextlink"><p>artwork 01</p></a>
+        <a href="artistdetail.html"><img src="img/65d721_761db9a0c113407f924a824ed173ed26_meitu_4.jpg" alt="sct"></a>
+        <a href="artistdetail.html" class="intextlink"><p>Pilgrimage</p></a>
       </div>
       <div class = "three-col">
-        <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2.png" alt="sct"></a>
-        <p>artwork 02</p>
+        <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2_meitu_1.jpg" alt="sct"></a>
+        <a href="artistdetail.html" class="intextlink"><p>2050</p></a>
         </div>
         <div class = "three-col">
-        <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e.png" alt="sct"></a>
-        <p>artwork 03</p>
+        <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e_meitu_2.jpg" alt="sct"></a>
+        <a href="artistdetail.html" class="intextlink"><p>Nickelodeon Art</p></a>
         </div>
       </div>
     </section>
@@ -47,19 +52,19 @@
 
     <!-- show case artwork -->
     <section id="artworks">
-      <h3 class="h3">Newest Artworks</h3>
+      <h2 class="h2 hometitle">Newest Artworks</h2>
         <div class="flex-grid">
           <div class = "three-col">
-            <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
-            <a href="artworkdetail.html" class = "intextlink"><p>artwork 01</p></a>
+            <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2_meitu_3.jpg" alt="sct"></a>
+            <a href="artworkdetail.html" class = "intextlink"><p>Q POP</p></a>
           </div>
           <div class = "three-col">
-            <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2.png" alt="sct"></a>
-            <p>artwork 02</p>
+            <a href="#"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sct"></a>
+            <a href="artworkdetail.html" class = "intextlink"><p>Paper Tiger</p></a>
             </div>
             <div class = "three-col">
-            <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e.png" alt="sct"></a>
-            <p>artwork 03</p>
+            <a href="#"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+            <a href="artworkdetail.html" class = "intextlink"><p>Viscera</p></a>
             </div>
           </div>
         </section>
