--- a/success.html
+++ b/success.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -23,10 +23,9 @@
 
 <!-- show case artist -->
 
-<div class="flex-grid structure">
-  <div class= "one-col"><a href = "events.html"> <h3>Banner</h3> </a></div>
-</div>
+
 <div class = "successinfo">
+  <img src="img/success-icon-28.png" alt = "success info icon">
   <h2 class="h2">Successful!</h2>
   <a class="submit" href="index.html">Back To Home Page</a>
 </div>
