--- a/modify.html
+++ b/modify.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -29,43 +29,52 @@
 
 
     <div class="flex-grid">
-      <div class = "two-col1">
-        <a href="#"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
+      <div class = "three-col">
+        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
       </div>
-      <div class = "two-col2">
-        <h3 class="h3">Question 1: </h3>
+      <div class = "three-col">
+        <p>How many characters would you like for this commission? </p>
         <select>
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="opel">Opel</option>
-          <option value="audi">Audi</option>
+          <option value="volvo">1</option>
+          <option value="saab">2</option>
+          <option value="opel">3</option>
+          <option value="audi">4</option>
         </select>
-        <h3 class="h3">Question 2: </h3>
+        <p>What kind of background would you like for this commission? </p>
         <select>
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="opel">Opel</option>
-          <option value="audi">Audi</option>
+          <option value="volvo">no background</option>
+          <option value="saab">solid background</option>
+          <option value="opel">designed background</option>
+          <option value="audi">full background</option>
         </select>
-        <h3 class="h3">Question 3: </h3>
+        <p>What kind of color style would you like for this commission? </p>
         <select>
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="opel">Opel</option>
-          <option value="audi">Audi</option>
+          <option value="volvo">line art</option>
+          <option value="saab">base color</option>
+          <option value="opel">only shade</option>
+          <option value="audi">full colored</option>
         </select>
         <div class="pairbutton">
           <a class="reset" href="rule.html">Cancel</a>
           <a class="submit" href="review.html">Submit</a>
         </div>
         </div>
+        <div class = "three-col profile">
+          <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280_meitu_17.jpg" alt = "prf">
+          <a href="artistdetail.html" class="intextlink">Sachin Teng</a>
+
+          <p class = "attribution">Average finishing Time: 7days</p>
+          <p class = "attribution">Average price: $300</p>
+          <p class = "attribution">Rate: 8.6</p>
+          <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
+
+        </div>
+
+          </div>
 
 
 
         </div>
-
-
-          </div>
 
 
     <!-- footer -->
