--- a/rule.html
+++ b/rule.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -30,17 +30,17 @@
 
     <div class="flex-grid">
       <div class = "three-col">
-        <a href="#"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
+        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
       </div>
       <div class = "three-col">
 
         <ul class="bullet">
           <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Suspendisse tincidunt justo auctor lacinia cursus.</li>
+          <li>Duis blandit ultrices diam et placerat.</li>
+          <li>Curabitur neque libero, interdum nec nunc in, luctus consectetur massa.</li>
+          <li>Aenean non malesuada felis, ut ullamcorper ex.</li>
+          <li>Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend.</li>
         </ul>
         <div class="pairbutton">
           <a class="reset" href="artworkdetail.html">Cancel</a>
@@ -48,15 +48,15 @@
         </div>
         </div>
         <div class = "three-col profile">
-          <a href="artistdetail.html"><img src = "img/profle.png" alt = "prf"></a>
-          <a href="artistdetail.html" class="intextlink">Artist Name</a>
-          <p class = "attribution">Attribution</p>
-          <p class = "attribution">Attribution</p>
-          <p class = "attribution">Attribution</p>
+          <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280_meitu_17.jpg" alt = "prf">
+          <a href="artistdetail.html" class="intextlink">Sachin Teng</a>
+
+          <p class = "attribution">Average finishing Time: 7days</p>
+          <p class = "attribution">Average price: $300</p>
+          <p class = "attribution">Rate: 8.6</p>
           <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
 
         </div>
-
 
           </div>
 </div>
