--- a/account.html
+++ b/account.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -23,6 +23,10 @@
 
 <!-- show case artist -->
 <div class="account">
+
+  <div class="flex-grid banner">
+    <img src="img/strife_orig_meitu_18.jpg" alt = "terms of use banner">
+  </div>
 
   <h2 class="h2">Account</h2>
 
