--- a/artistdetail.html
+++ b/artistdetail.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -22,43 +22,37 @@
     </nav>
 
 <!-- show case artist -->
-<div class="artworkdetail">
+<div class="artistdetail">
+  <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "prf">
 
-  <h2 class="h2">Artist Name</h2>
+  <h2 class="h2">Sachin Teng</h2>
+
+        <p class = "attribution">Average finishing Time: 7 days | </p>
+          <p class = "attribution">Average price: $300 | </p>
+          <p class = "attribution">Rate: 8.6</p>
 
 
-
-    <div class="flex-grid">
-      <div class = "two-col1 profile">
-        <a href="artistdetail.html"><img src = "img/profle.png" alt = "prf"></a>
-        <a href="artistdetail.html" class="intextlink">Artist Name</a>
-        <p class = "attribution">Attribution</p>
-        <p class = "attribution">Attribution</p>
-        <p class = "attribution">Attribution</p>
-      </div>
-      <div class = "two-col2">
         <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
-        </div>
 
 
 
-        </div>
+
 
           </div>
           <div class="flex-grid">
-            <div class = "three-col">
-              <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
-              <a href="artworkdetail.html" class = "intextlink"><p>artwork 01</p></a>
+          <div class = "three-col">
+            <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2_meitu_3.jpg" alt="sct"></a>
+            <a href="artworkdetail.html" class = "intextlink"><p>Q POP</p></a>
+          </div>
+          <div class = "three-col">
+            <a href="#"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sct"></a>
+            <a href="artworkdetail.html" class = "intextlink"><p>Paper Tiger</p></a>
             </div>
             <div class = "three-col">
-              <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2.png" alt="sct"></a>
-              <p>artwork 02</p>
-              </div>
-              <div class = "three-col">
-              <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e.png" alt="sct"></a>
-              <p>artwork 03</p>
-              </div>
+            <a href="#"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+            <a href="artworkdetail.html" class = "intextlink"><p>Viscera</p></a>
             </div>
+          </div>
 
 
     <!-- footer -->
