--- a/artists.html
+++ b/artists.html
@@ -14,16 +14,23 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
       <div class = "navelement"><a href="account.html" class = "navbutton">Account</a></div>
     </nav>
 
+    <!-- banner -->
+    <div class="flex-grid banner">
+
+         <img src="img/9637598_orig_meitu_7.jpg" alt="artist banner">
+
+    </div>
+
 <!-- show case artist -->
 <section id="artists">
-  <h3 class="h3">Artists</h3>
+  <h2 class="h2">Artists</h2>
 
 <div class="filter">
 <table>
@@ -54,36 +61,35 @@
 </div>
 
 
+<div class="thumb">
 
-
-    <div class="flex-grid">
-      <div class = "three-col">
-        <a href="artistdetail.html"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
-        <p>artwork 01</p>
+<div class="flex-grid">
+  <div class = "three-col">
+    <a href="artistdetail.html"><img src="img/julio-cesar-coisa-coisa_meitu_10.jpg" alt="sct"></a>
+    <a href="artistdetail.html" class="intextlink"><p>Julio Cesar</p></a>
+  </div>
+  <div class = "three-col">
+    <a href="#"><img src="img/26605861_p0_meitu_11.jpg" alt="sct"></a>
+    <a href="artistdetail.html" class="intextlink"><p>Natsume Kazuki</p></a>
+    </div>
+    <div class = "three-col">
+    <a href="#"><img src="img/44236350_p35_meitu_12.jpg" alt="sct"></a>
+    <a href="artistdetail.html" class="intextlink"><p>Kuroblood</p></a>
+    </div>
+    <div class = "three-col">
+      <a href="artistdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+      <a href="artistdetail.html" class="intextlink"><p>Sachin Teng</p></a>
+    </div>
+    <div class = "three-col">
+      <a href="#"><img src="img/tumblr_lwi05bxXHA1qfxndqo1_500_meitu_13.jpg" alt="sct"></a>
+      <a href="artistdetail.html" class="intextlink"><p>Kohske</p></a>
       </div>
       <div class = "three-col">
-        <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2.png" alt="sct"></a>
-        <p>artwork 02</p>
-        </div>
-        <div class = "three-col">
-        <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e.png" alt="sct"></a>
-        <p>artwork 03</p>
-        </div>
-
-          <div class = "three-col">
-            <a href="#"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
-            <p>artwork 01</p>
-          </div>
-          <div class = "three-col">
-            <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2.png" alt="sct"></a>
-            <p>artwork 02</p>
-            </div>
-            <div class = "three-col">
-            <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e.png" alt="sct"></a>
-            <p>artwork 03</p>
-            </div>
-          </div>
-        </section>
+      <a href="#"><img src="img/735_max_meitu_14.jpg" alt="sct"></a>
+      <a href="artistdetail.html" class="intextlink"><p>John Liberto</p></a>
+      </div>
+  </div>
+</div>
 
 
     <!-- footer -->
