--- a/artwork.html
+++ b/artwork.html
@@ -14,73 +14,82 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
       <div class = "navelement"><a href="account.html" class = "navbutton">Account</a></div>
     </nav>
 
+    <!-- banner -->
+    <div class="flex-grid banner">
+
+         <img src="img/tumblr_mm9mksfXWv1qgsw73o1_1280_meitu_16.jpg" alt="artwork banner">
+
+    </div>
+
 <!-- show case artist -->
 <section id="artists">
-  <h3 class="h3">Artworks</h3>
+  <h2 class="h2">Artworks</h2>
 
-  <div class="filter">
-  <table>
-    <tr>
-      <th>Order:</th>
-      <td><a href="#" class = "intextlink">Newest</a></td>
-      <td><a href="#" class = "intextlink">Most Popular</a></td>
-    </tr>
-    <tr>
-      <th>Type:</th>
-      <td><a href="#" class = "intextlink">Character Design </a></td>
-      <td><a href="#" class = "intextlink">Scenery Design </a></td>
-      <td><a href="#" class = "intextlink">Comic  </a></td>
-      <td><a href="#" class = "intextlink">Illustration  </a></td>
-      <td><a href="#" class = "intextlink">Poster </a></td>
-      <td><a href="#" class = "intextlink">CG </a></td>
-    </tr>
-    <tr>
-      <th>Style:</th>
-      <td><a href="#" class = "intextlink">American  </a></td>
-      <td><a href="#" class = "intextlink">Japanese </a></td>
-      <td><a href="#" class = "intextlink">Korean  </a></td>
-      <td><a href="#" class = "intextlink">Chinese  </a></td>
-      <td><a href="#" class = "intextlink">Pixel </a></td>
-      <td><a href="#" class = "intextlink">Realism  </a></td>
-    </tr>
-  </table>
-  </div>
+<div class="filter">
+<table>
+  <tr>
+    <th>Order:</th>
+    <td><a href="#" class = "intextlink">Newest</a></td>
+    <td><a href="#" class = "intextlink">Most Popular</a></td>
+  </tr>
+  <tr>
+    <th>Type:</th>
+    <td><a href="#" class = "intextlink">Character Design </a></td>
+    <td><a href="#" class = "intextlink">Scenery Design </a></td>
+    <td><a href="#" class = "intextlink">Comic  </a></td>
+    <td><a href="#" class = "intextlink">Illustration  </a></td>
+    <td><a href="#" class = "intextlink">Poster </a></td>
+    <td><a href="#" class = "intextlink">CG </a></td>
+  </tr>
+  <tr>
+    <th>Style:</th>
+    <td><a href="#" class = "intextlink">American  </a></td>
+    <td><a href="#" class = "intextlink">Japanese </a></td>
+    <td><a href="#" class = "intextlink">Korean  </a></td>
+    <td><a href="#" class = "intextlink">Chinese  </a></td>
+    <td><a href="#" class = "intextlink">Pixel </a></td>
+    <td><a href="#" class = "intextlink">Realism  </a></td>
+  </tr>
+</table>
+</div>
 
-    <div class="flex-grid">
-      <div class = "three-col">
-        <a href="artworkdetail.html"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
-        <a href="artworkdetail.html" class="intextlink"><p>artwork 01</p></a>
+
+<div class="thumb">
+
+  <div class="flex-grid">
+    <div class = "three-col">
+      <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2_meitu_3.jpg" alt="sct"></a>
+      <a href="artworkdetail.html" class = "intextlink"><p>Q POP</p></a>
+    </div>
+    <div class = "three-col">
+      <a href="artworkdetail.html"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sct"></a>
+      <a href="artworkdetail.html" class = "intextlink"><p>Paper Tiger</p></a>
       </div>
       <div class = "three-col">
-        <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2.png" alt="sct"></a>
-        <p>artwork 02</p>
+      <a href="artworkdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+      <a href="artworkdetail.html" class = "intextlink"><p>Viscera</p></a>
+      </div>
+      <div class = "three-col">
+        <a href="artworkdetail.html"><img src="img/26605861_p0_meitu_11.jpg" alt="sct"></a>
+        <a href="artworkdetail.html" class="intextlink"><p>2Y Law</p></a>
         </div>
         <div class = "three-col">
-        <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e.png" alt="sct"></a>
-        <p>artwork 03</p>
+        <a href="artworkdetail.html"><img src="img/44236350_p35_meitu_12.jpg" alt="sct"></a>
+        <a href="artworkdetail.html" class="intextlink"><p>Thunder Dragon</p></a>
         </div>
-
-          <div class = "three-col">
-            <a href="#"><img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct"></a>
-            <p>artwork 01</p>
-          </div>
-          <div class = "three-col">
-            <a href="#"><img src="img/65d721_4d7ac0c34c4b43f38320381124c87fdb-mv2.png" alt="sct"></a>
-            <p>artwork 02</p>
-            </div>
-            <div class = "three-col">
-            <a href="#"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e.png" alt="sct"></a>
-            <p>artwork 03</p>
-            </div>
-          </div>
-        </section>
+        <div class = "three-col">
+        <a href="artworkdetail.html"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e_meitu_2.jpg" alt="sct"></a>
+        <a href="artworkdetail.html" class="intextlink"><p>Nickelodeon Art</p></a>
+        </div>
+    </div>
+</div>
 
 
     <!-- footer -->
