--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -22,8 +22,8 @@
     </nav>
 
     <!-- banner -->
-    <div class="flex-grid structure banner">
-      <div class= "one-col"> <h3>Banner</h3> </div>
+    <div class="flex-grid banner">
+      <img src="img/tumblr_nfz1mfybPh1qgsw73o1_1280_meitu_5.jpg" alt = "contact us banner">
     </div>
 
 
@@ -32,7 +32,7 @@
         <input type="text" name="search" placeholder="Search..">
         <a class="submit" href="#">Search</a>
       </form>
-        <h3 class = "h3">Contact Us On</h3>
+        <h2 class = "h2">Contact Us On</h2>
 
 
             <div class="flex-grid contact">
