--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -22,25 +22,23 @@
     </nav>
 
     <!-- banner -->
-    <div class="flex-grid structure banner">
-      <div class= "one-col"> <h3>Banner</h3> </div>
+    <div class="flex-grid banner">
+        <img src = "img/bring_honor_by_contraomnes_meitu_1.jpg" alt = "homebanner">
+
     </div>
 
     <div class="abouttext">
-      <h2 class = "h2">Event 1 Title</h2>
+      <h2 class = "h2">Discount Event</h2>
       <figure>
         <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="aboutimg">
-        <figcaption>This is a img about us</figcaption>
+        <figcaption>Sachin Teng's work</figcaption>
       </figure>
-      <h3 class="h3">section 1</h3>
+      <h3 class="h3">About this event</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis. Praesent lacinia, enim at vehicula faucibus, mi augue elementum ante, sed interdum est ante ac mi. Sed faucibus tristique tristique. Proin ac mi ut odio sodales varius non a nibh. Phasellus ac orci massa. Nullam a diam massa. Quisque vehicula maximus ligula ut fermentum. Nullam a tortor nisl.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat.Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis. Praesent lacinia, enim at vehicula faucibus, mi augue elementum ante, sed interdum est ante ac mi. Sed faucibus tristique tristique.
       </p>
-      <h2 class = "h2">Event 2 Title</h2>
-      <figure>
-        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="aboutimg">
-        <figcaption>This is a img about us</figcaption>
-      </figure>
-      <h3 class="h3">section 1</h3>
+      <h2 class = "h2">Off-line Meeting</h2>
+
+      <h3 class="h3">Meeting introduction</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis. Praesent lacinia, enim at vehicula faucibus, mi augue elementum ante, sed interdum est ante ac mi. Sed faucibus tristique tristique. Proin ac mi ut odio sodales varius non a nibh. Phasellus ac orci massa. Nullam a diam massa. Quisque vehicula maximus ligula ut fermentum. Nullam a tortor nisl.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat.Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis. Praesent lacinia, enim at vehicula faucibus, mi augue elementum ante, sed interdum est ante ac mi. Sed faucibus tristique tristique. </p>
 
     </div>
