--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navigation bar -->
     <nav class = "navigation navbar">
-      <div class = "navlogo"><a href="index.html">Navlogo</a></div>
+      <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
       <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
       <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
       <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
@@ -22,23 +22,22 @@
     </nav>
 
     <!-- banner -->
-    <div class="flex-grid structure banner">
-      <div class= "one-col"> <h3>Banner</h3> </div>
+    <div class="flex-grid banner">
+
+         <img src="img/we__ll_see_by_contraomnes_meitu_3.jpg" alt="about banner">
+
     </div>
 
     <div class="abouttext">
       <h2 class = "h2">About Pixeller</h2>
-      <figure>
-        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="aboutimg">
-        <figcaption>This is a img about us</figcaption>
-      </figure>
-      <h3 class="h3">section 1</h3>
+
+      <h3 class="h3">Who are we</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis. Praesent lacinia, enim at vehicula faucibus, mi augue elementum ante, sed interdum est ante ac mi. Sed faucibus tristique tristique. Proin ac mi ut odio sodales varius non a nibh. Phasellus ac orci massa. Nullam a diam massa. Quisque vehicula maximus ligula ut fermentum. Nullam a tortor nisl.</p>
-      <h3 class="h3">section 2</h3>
+      <h3 class="h3">Why choose Pixeller</h3>
       <p>
 
 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam vel bibendum est, id ornare elit. Duis tincidunt metus sem, sed sodales ligula fringilla in. Sed sodales lacus id cursus iaculis. Aenean laoreet sapien at dolor vestibulum, non iaculis massa rhoncus. Proin iaculis magna turpis, quis dictum sem efficitur sit amet. Vivamus nec enim at tellus consectetur pharetra. Curabitur viverra nulla massa, vel porta quam rhoncus vitae. Morbi volutpat arcu dolor, vulputate tempor ipsum finibus eget. Maecenas faucibus tempus mauris. Pellentesque consequat ac quam eget rutrum. Morbi magna est, blandit non est non, hendrerit pretium ex. Vestibulum ante tortor, semper at mattis vel, viverra at risus.</p>
-<h3 class="h3">section 3</h3>
+<h3 class="h3">What can you do in Pixeller</h3>
 <p>
 
 Cras suscipit enim nec mauris euismod lobortis. Praesent condimentum tempus neque, vitae porttitor elit molestie nec. Aenean et ex massa. Sed tempus nisl in pellentesque lobortis. Donec vestibulum neque leo, ut euismod purus auctor id. Suspendisse nec metus vitae libero fringilla finibus. Curabitur sed viverra purus. Vivamus in dictum nisi. Sed diam metus, faucibus sit amet lectus non, sodales vulputate massa. Curabitur eget felis id nisl dictum iaculis eu non nisl. Nam a ligula id quam eleifend placerat at ac augue. Phasellus viverra pharetra nibh ut ultrices.</p>
