citation and style guide

--- a/Citations.html
+++ b/Citations.html
@@ -103,6 +103,10 @@
         <li>
           <cite>Peter</cite>. (Programmer). (2014). <strong>order list with numbers another color</strong> [Tutorial]. Retrieved from <a href="https://stackoverflow.com/questions/488830/ol-with-numbers-another-color">https://stackoverflow.com/questions/488830/ol-with-numbers-another-color</a>
         </li>
+        <li>
+          <cite>h3schools.com</cite>. (Programmer). (2014). <strong>How TO - Full screen Overlay Navigation, How TO - Add Image Effects, Table, Select</strong> [Tutorial]. Retrieved from <a href="https://www.w3schools.com/">https://www.w3schools.com/</a>
+        </li>
+        
       </ul>
 
     </section>
