--- a/Style_guide.html
+++ b/Style_guide.html
@@ -18,6 +18,7 @@
       <a href="User-flows.html" class = "navbutton">User-flows</a>
       <a href="Sitemap.html" class = "navbutton">Site Map</a>
       <a href="Citations.html" class = "navbutton">Citations</a>
+      <a href="https://github.com/gensyuuu/339-project2" class = "navbutton">GitHub</a>
     </nav>
 
     <h1>Project 01 - Style Guide</h1>
@@ -234,11 +235,12 @@
 
         <h3>Rendered element:</h3>
         <nav class = "navigation navbar">
-          <dev class = "navelement"><a href="#" class = "navbutton">Artists</a></dev>
-          <dev class = "navelement"><a href="#" class = "navbutton">Artwork</a></dev>
-          <dev class = "navelement"><a href="#" class = "navbutton">Events</a></dev>
-          <dev class = "navelement"><a href="#" class = "navbutton">Account</a></dev>
-          
+          <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
+          <div class = "navspace"></div>
+            <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
+            <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
+            <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
+
         </nav>
       </section>
 
@@ -333,11 +335,151 @@
         <p class="color c7">#E7DACB</p>
 
     </section>
+    <section>
+      <h2>filter</h2>
+      <h3>CSS selector:</h3>
+      <p>.filter</p>
+
+
+      <h3>Rendered element:</h3>
+      <div class="filter">
+      <table>
+        <tr>
+          <th>Order:</th>
+          <td><a href="#" class = "intextlink">Newest</a></td>
+          <td><a href="#" class = "intextlink">Most Popular</a></td>
+        </tr>
+        <tr>
+          <th>Type:</th>
+          <td><a href="#" class = "intextlink">Character Design </a></td>
+          <td><a href="#" class = "intextlink">Scenery Design </a></td>
+          <td><a href="#" class = "intextlink">Comic  </a></td>
+          <td><a href="#" class = "intextlink">Illustration  </a></td>
+          <td><a href="#" class = "intextlink">Poster </a></td>
+          <td><a href="#" class = "intextlink">CG </a></td>
+        </tr>
+        <tr>
+          <th>Style:</th>
+          <td><a href="#" class = "intextlink">American  </a></td>
+          <td><a href="#" class = "intextlink">Japanese </a></td>
+          <td><a href="#" class = "intextlink">Korean  </a></td>
+          <td><a href="#" class = "intextlink">Chinese  </a></td>
+          <td><a href="#" class = "intextlink">Pixel </a></td>
+          <td><a href="#" class = "intextlink">Realism  </a></td>
+        </tr>
+      </table>
+      </div>
+
+  </section>
+
+  <section>
+    <h2>profile</h2>
+    <h3>CSS selector:</h3>
+    <p>.profile</p>
+
+
+    <h3>Rendered element:</h3>
+    <div class = "profile">
+      <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "prf">
+      <a href="artistdetail.html" class="intextlink">Sachin Teng</a>
+
+      <p class = "attribution">Average finishing Time: 7days</p>
+      <p class = "attribution">Average price: $300</p>
+      <p class = "attribution">Rate: 8.6</p>
+      <p class = "attribution">Artist tag: American style, fine quality</p>
+      <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
+
+    </div>
+
+</section>
+
+<section>
+  <h2>review</h2>
+  <h3>CSS selector:</h3>
+  <p>.filter</p>
+
+
+  <h3>Rendered element:</h3>
+  <nav class="filter">
+  <table>
+    <tr>
+      <th>How many characters?</th>
+      <td>3</td>
+      <td>+ $40</td>
+    </tr>
+    <tr>
+      <th>What kind of background style?</th>
+      <td>Full colored background</td>
+      <td>+ $20</td>
+    </tr>
+    <tr>
+      <th>What kind of color style?</th>
+      <td>Only shaded</td>
+      <td>- $10</td>
+    </tr>
+    <tr>
+      <th>Base price</th>
+      <td> </td>
+      <td>&nbsp &nbsp$50</td>
+    </tr>
+  </table>
+</nav>
+<div class = "subtotal">
+<h3 class="h3">Subtotal: $100</h3>
+</div>
+
+</section>
+
+<section>
+  <h2>event banner</h2>
+  <h3>CSS selector:</h3>
+  <p>.banner</p>
+
+
+  <h3>Rendered element:</h3>
+  <div class="flex-grid banner">
+    <div class= "one-col">
+
+      <a href = "events.html" class = "blur"> <img src = "img/65d721_116745a5d0dd412b9355ed66d0c27d4e.jpg" alt = "homebanner"> </a>
+
+
+    </div>
+  </div>
+
+</section>
+
+<section>
+  <h2>mobile menu</h2>
+  <h3>CSS selector:</h3>
+  <p>.mobilemenu</p>
+
+
+  <h3>Rendered element:</h3>
+  <p>please resize to mobile screen to view this render element. </p>
+  <div class = "mobilemenu">
+
+      <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+      <a href="artists.html" class = "navbutton">Artists</a>
+      <a href="artwork.html" class = "navbutton">Artworks</a>
+      <a href="events.html" class = "navbutton">Events</a>
+      </div>
+      </div>
+      <div class = "navlogo">
+        <a href="index.html" ><img src = "img/logo.png" alt = "logo"></a>
+      <span  onclick="openNav()" class = "burgericon">&#9776; </span>
+    </div>
+
+    </div>
+
+</section>
+
   </section>
     <!-- // COMBINED ELEMENTS SECTION -->
 
 
 
-
+<script src="js/mobile_menu.js"></script>
   </body>
 </html>
