--- a/modify.html
+++ b/modify.html
@@ -15,11 +15,34 @@
     <!-- navigation bar -->
     <nav class = "navigation navbar">
       <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
-      <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
-      <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
-      <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
-      <div class = "navelement"><a href="account.html" class = "navbutton">Account</a></div>
+      <div class = "navspace"></div>
+        <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
+        <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
+        <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
+
     </nav>
+
+    <!-- this is burger menu for the mobile -->
+    <div class = "mobilemenu">
+
+        <div id="myNav" class="overlay">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div class="overlay-content">
+        <a href="artists.html" class = "navbutton">Artists</a>
+        <a href="artwork.html" class = "navbutton">Artworks</a>
+        <a href="events.html" class = "navbutton">Events</a>
+        </div>
+        </div>
+        <div class = "navlogo">
+          <a href="index.html" ><img src = "img/logo.png" alt = "logo"></a>
+        <span  onclick="openNav()" class = "burgericon">&#9776; </span>
+      </div>
+
+      </div>
+
+
+
+        <!-- burger menu end here -->
 
 <!-- show case artist -->
 <div class="artworkdetail">
@@ -29,16 +52,16 @@
 
 
     <div class="flex-grid">
-      <div class = "three-col">
+      <div class = "three-col order2">
         <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
       </div>
       <div class = "three-col">
         <p>How many characters would you like for this commission? </p>
         <select>
-          <option value="volvo">1</option>
-          <option value="saab">2</option>
-          <option value="opel">3</option>
-          <option value="audi">4</option>
+          <option value="volvo">I would like 1 character</option>
+          <option value="saab">I would like 2 characters</option>
+          <option value="opel">I would like 3 characters</option>
+          <option value="audi">I would like 4 characters</option>
         </select>
         <p>What kind of background would you like for this commission? </p>
         <select>
@@ -60,12 +83,13 @@
         </div>
         </div>
         <div class = "three-col profile">
-          <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280_meitu_17.jpg" alt = "prf">
-          <a href="artistdetail.html" class="intextlink">Sachin Teng</a>
+          <img src = "img/26605861_p0_meitu_11.png" alt = "prf">
+          <a href="artistdetail.html" class="intextlink">Natsume Kazuki</a>
 
-          <p class = "attribution">Average finishing Time: 7days</p>
-          <p class = "attribution">Average price: $300</p>
-          <p class = "attribution">Rate: 8.6</p>
+          <p class = "attribution">Average finishing Time: 3 days</p>
+          <p class = "attribution">Average price: $100</p>
+          <p class = "attribution">Rate: 7.8</p>
+          <p class = "attribution">Artist tag: American style, fine quality</p>
           <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
 
         </div>
@@ -90,6 +114,6 @@
             <a class="intextlink" href="contact.html">Contact Us</a>
           </div>
         </div>
-
+<script src="js/mobile_menu.js"></script>
   </body>
   </html>
