--- a/artworkdetail.html
+++ b/artworkdetail.html
@@ -56,7 +56,7 @@
         <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
       </div>
       <div class = "three-col">
-        <h3 class="h3">$80<h3>
+        <h3 class="h3">$80</h3>
           <p>Artwork description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
           <div class = "singlebutton">
           <a class="submit" href="rule.html">Commission</a>
